# geomanpy

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: check.yml  format.yml  publish.yml
py_src/geomanpy/: __init__.py  __init__.pyi
scripts/: fmt.sh  test-cross-build.sh
src/: dataclass.rs  lib.rs  pickle.rs  rp_serde.rs  wreck_wrappers.rs
src/geom_api/: affine3_ext.rs  aligned_box3d.rs  collider_ext.rs  cuboid_ext.rs  mat3_ext.rs  mod.rs  pointcloud_ext.rs  quat_ext.rs  raw_geom_util.rs  sphere_ext.rs  trimesh_convert.rs  vec3_ext.rs  wreck_ext.rs
src/glam_wrappers/: affine3.rs  mat3.rs  mat4.rs  mod.rs  quat.rs  vec2.rs  vec3.rs  vec4.rs
src/rustpython_bindings/: mod.rs
src/squiggle_wrappers/: bezier.rs  interval.rs  mod.rs  nearest.rs  polyline.rs  spline.rs
src/wreck_wrappers/: capsule.rs  collider.rs  convex_polygon.rs  convex_polytope.rs  cuboid.rs  cylinder.rs  line.rs  line_segment.rs  mod.rs  plane.rs  pointcloud.rs  ray.rs  sphere.rs  sphere_collection.rs
tests/: glam.py  glam_py.rs  rp_parity.rs  squiggle.py  squiggle_py.rs  wreck.py  wreck_py.rs
