[package]
name = "geomanpy"
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"
authors = ["Bowan Foryt <bowan@valstad.com>"]
description = "Python bindings for glam and wreck, providing geometric/linalg primitives and collision detection."
repository = "https://github.com/valstad-shipworks/geomanpy"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["pyo3-backend", "not_build_only"]
not_build_only = []
# Active Python backend — exactly one must be selected.
pyo3-backend = ["dep:pyo3", "dep:numpy", "dep:pythonize"]
rustpython-backend = ["dep:rustpython-vm", "dep:rumpy", "dep:ndarray"]
# Opt-in lock-checked interior mutability for the rustpython backend.
# Without it, mutable wrappers use `UnsafeCell` and rely on the embedder
# to avoid concurrent access (cheap, single-threaded). With it, they use
# rustpython's `PyRwLock`, which is safe under threading at the cost of
# per-access locking. Modeled on rumpy's `safe-locks` feature.
safe-locks = ["rustpython-vm?/threading"]

[dependencies]
glam = { version = "0.32.1", features = ["serde", "approx"] }
wreck = { version = "0.3.5", features = ["serde", "approx"] }
approx = "0.5.1"
serde = { version = "1.0.228", features = ["alloc", "derive"] }
serde_json = "1.0"
serde-pickle = "1.2"

numpy = { version = "0.28.0", optional = true }
pyo3 = { version = "0.28.3", features = ["multiple-pymethods"], optional = true }
pythonize = { version = "0.28.0", optional = true }

rustpython-vm = { version = "0.5.0", optional = true }
rumpy = { version = "0.1.0", optional = true }
ndarray = { version = "0.17.2", optional = true }

[profile.release]
opt-level = 2
lto = true
