[package]
name = "geomanpy"
version = "0.4.2"
edition = "2024"
license = "Apache-2.0"
authors = ["Bowan Foryt <bowan@valstad.com>"]
description = "Python bindings for glam and wreck, providing geometric/linalg primitives and collision detection."
repository = "https://github.com/valstad-shipworks/geomanpy"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[[test]]
name = "glam_py"
path = "tests/glam_py.rs"
harness = false
required-features = ["pyo3-backend"]

[[test]]
name = "wreck_py"
path = "tests/wreck_py.rs"
harness = false
required-features = ["pyo3-backend"]

[[test]]
name = "squiggle_py"
path = "tests/squiggle_py.rs"
harness = false
required-features = ["pyo3-backend"]

[features]
default = ["pyo3-backend", "not_build_only"]
not_build_only = []
pyo3-backend = ["dep:pyo3", "dep:numpy", "dep:pythonize"]
abi3 = ["pyo3-backend", "pyo3/abi3-py310"]
abi3t = ["pyo3-backend", "pyo3/abi3t-py315"]
rustpython-backend = ["dep:rustpython-vm", "dep:rumpy", "dep:ndarray"]
safe-locks = ["rustpython-vm?/threading"]

[dependencies]
glam = { version = "0.32.1", features = ["serde", "approx"] }
wreck = { version = "0.4.0", features = ["serde", "approx"] }
approx = "0.5.1"
serde = { version = "1.0.228", features = ["alloc", "derive"] }
serde_json = "1.0"
serde-pickle = "1.2"

numpy = { version = "0.29.0", optional = true }
pyo3 = { version = "0.29.0", features = ["multiple-pymethods"], optional = true }
pythonize = { version = "0.29.0", optional = true }

rustpython-vm = { version = "0.5.0", optional = true, default-features = false }
rumpy = { version = "0.1.0", optional = true }
ndarray = { version = "0.17.2", optional = true }
squiggle = { version = "1.0.0", features = ["serde", "approx"] }

[dev-dependencies]
pyo3 = { version = "0.29.0", features = ["auto-initialize"] }
rustpython-vm = { version = "0.5.0", default-features = false, features = ["compiler"] }

[profile.release]
opt-level = 2
lto = true

[target.'cfg(windows)'.dependencies]
pyo3 = { version = "0.29.0", optional = true, features = ["generate-import-lib"] }
