[build-system]
requires = ["maturin>=1.9.4,<2"]
build-backend = "maturin"

[project]
name = "geomanpy"
requires-python = ">=3.7"
readme = "README.md"
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module", "pyo3-backend", "not_build_only"]
bindings = "pyo3"
profile = "release"
module-name = "geomanpy._geomanpy"
python-source = "py_src"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
